Fixed bug on mobile, could on delete new lines in code area. Various other fixes

--- a/service-template.css
+++ b/service-template.css
@@ -353,7 +353,7 @@ body {
 
 #service-container .right-dock.open {
     right: 40px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     z-index: 100;
     box-shadow: 1px 0px 5px 0px rgba(0, 0, 0, 0.5);
 }
@@ -554,9 +554,13 @@ body {
 }
 
 .query-terminal-panel #code-area {
-    height: 10em;
-    max-height: 10em;
     width: 100%;
+    height: 10em;
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 10em;
+    min-height: 10em;
+    color: black;
 }
 
 #service-container #gis-toolbar {
@@ -610,15 +614,6 @@ body {
     width: 1.8em;
     padding-right: 1em;
 }
-
-/*@media screen and (max-width: 1199px) {
-    #service-container .dock {
-        width: 50%;
-    }
-    #service-container .right-dock {
-        right: -4%;
-    }
-}*/
 
 @media screen and (max-width: 1199px) {
     #service-container .dock {
